Fix: 검색창-정류장패널-하단바 z-index 충돌
StationSearchMadl의 z-index가 상위 컴포넌트인 StationPanel의 z-index보다 높아지지 않는 현상으로 StationSearchModal을 활성화시켜도 SearchBar와 Footer보다 z-index가 높아지지 않는 형상으로 인한 수정

--- a/src/Components/DraggablePanel/DraggablePanel.module.css
+++ b/src/Components/DraggablePanel/DraggablePanel.module.css
@@ -1,7 +1,7 @@
 .draggablePanelContainer {
   background-color: white;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   position: fixed;
@@ -17,8 +17,7 @@
   justify-content: center;
   align-items: center;
   cursor: grab;
-  background-color: var(--uc-color);
-  /* user-select: none; */
+  background-color: rgb(41, 41, 41);
   touch-action: none;
 }
 
